--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello, world.</title>
+		<title>Holly Parkin</title>
+
+		<link rel="stylesheet" href="indexcss.css">
 	</head>
 	<body>
-		Hello, world.
-		<a href="link/to/file.html">Test</a>
+		<h1>HOLLY PARKIN</h1>
+		<h2>CORE STUDIO/LAB: INTERACTION</h2>
+		
+		<ul>
+		<li><a href="space/index.html">Project 1: Space</a></li>
+		</ul>
 	</body>
 </html>
