--- a/index2.html
+++ b/index2.html
@@ -3,10 +3,12 @@
 <html>
 	<head>
 		<title>Holly Parkin</title>
+
+		<link rel="stylesheet" href="indexcss.css">
 	</head>
 	<body>
-		<h1>Holly Parkin</h1>
-		<h2>Core Studio/Lab: Interaction</h2>
+		<h1>HOLLY PARKIN</h1>
+		<h2>CORE STUDIO/LAB: INTERACTION</h2>
 		
 		<ul>
 		<li><a href="space/index.html">Project 1: Space</a></li>
