--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <html>
 	<head>
 		<title>Holly Parkin</title>
+
+		<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+
 	</head>
 	<body>
 		<h1>Holly Parkin</h1>
 		<h2>Core Studio/Lab: Interaction</h2>
 		
 		<ul>
-		<li><a href="space/index.html">Project 1: Space</a></li>
+		<li><a href="space/Parkin_Space.pptx">Project 1: Space</a></li>
 		</ul>
 	</body>
 </html>
