--- a/index.html
+++ b/index.html
@@ -7,12 +7,58 @@
 		<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 
 	</head>
+
+
 	<body>
+	<div class="wrapper">
+
+	<div class="header c c6">
 		<h1>Holly Parkin</h1>
-		<h2>Core Studio/Lab: Interaction</h2>
+		<h2>Core Interaction</h2>
+	</div>
+
+	<div class="c c1">c1</div>
+	<div class="c c1">c1</div>
+	<div class="c c1">c1</div>
+	<div class="c c1">c1</div>
+	<div class="c c1">c1</div>
+	<div class="c c1">c1</div>
+c 
+	<div class="c c2">c2</div>
+	<div class="c c2">c2</div>
+	<div class="c c2">c2</div>
+c 
+	<div class="c c3">c3</div>
+	<div class="c c3">c3</div>
+c 
+	<div class="c c4">c4</div>
+	<div class="c c5">c5</div>
+	<div class="c c6">c6</div>
+
+		<div class="studio c c3">
+			<h2>Studio</h2>
+			<p> Some text about studio</p>
+
+			<h2>Space</h2>
+			<ul>
+				<li><a href="space/spaceprez.pptx">Space Analysis Presentation</a></li>
+				<li><a href="#">Website Ideas</a></li>
+			</ul>
+		</div>
+		<div class="lab c c3">
+			<h2>Lab</h2>
+			<p> Some text about lab</p>
+
+			<h2>Exercise 1</h2>
+			<ul>
+				<li><a href="#">My Friend</a></li>
+			</ul>
+		</div>
 		
-		<ul>
-		<li><a href="space/Parkin_Space.pptx">Project 1: Space</a></li>
-		</ul>
+		<div class="footer c c6">
+			Footer
+		</div>
+	
+	</div>
 	</body>
 </html>
