--- a/index.html
+++ b/index.html
@@ -17,20 +17,24 @@
 		<h2>Core Interaction</h2>
 	</div>
 
+	<div class="c c1"><img src="assets/img/obama-dog.jpg" />
+	</div>
 	<div class="c c1">c1</div>
 	<div class="c c1">c1</div>
 	<div class="c c1">c1</div>
 	<div class="c c1">c1</div>
 	<div class="c c1">c1</div>
-	<div class="c c1">c1</div>
-c 
+
+	<div class="c c2"><img src="assets/img/obama-dog.jpg" /></div>
+	<div class="c c2 parent">
+		<div class="c c1 no-left-gutter">c1</div>
+		<div class="c c1 no-right-gutter">c1</div>
+	</div>
 	<div class="c c2">c2</div>
-	<div class="c c2">c2</div>
-	<div class="c c2">c2</div>
-c 
+
+	<div class="c c3"><img src="assets/img/obama-dog.jpg" /></div>
 	<div class="c c3">c3</div>
-	<div class="c c3">c3</div>
-c 
+ 
 	<div class="c c4">c4</div>
 	<div class="c c5">c5</div>
 	<div class="c c6">c6</div>
