--- a/index.html
+++ b/index.html
@@ -12,57 +12,16 @@
 	<body>
 	<div class="wrapper">
 
-	<div class="header c c6">
-		<h1>Holly Parkin</h1>
-		<h2>Core Interaction</h2>
-	</div>
-
-	<div class="c c1"><img src="assets/img/obama-dog.jpg" />
-	</div>
-	<div class="c c1">c1</div>
-	<div class="c c1">c1</div>
-	<div class="c c1">c1</div>
-	<div class="c c1">c1</div>
-	<div class="c c1">c1</div>
-
-	<div class="c c2"><img src="assets/img/obama-dog.jpg" /></div>
-	<div class="c c2 parent">
-		<div class="c c1 no-left-gutter">c1</div>
-		<div class="c c1 no-right-gutter">c1</div>
-	</div>
-	<div class="c c2">c2</div>
-
-	<div class="c c3"><img src="assets/img/obama-dog.jpg" /></div>
-	<div class="c c3">c3</div>
- 
-	<div class="c c4">c4</div>
-	<div class="c c5">c5</div>
-	<div class="c c6">c6</div>
-
-		<div class="studio c c3">
-			<h2>Studio</h2>
-			<p> Some text about studio</p>
-
-			<h2>Space</h2>
-			<ul>
-				<li><a href="space/spaceprez.pptx">Space Analysis Presentation</a></li>
-				<li><a href="#">Website Ideas</a></li>
-			</ul>
+		<div class="header">
+			<h1>HOLLY PARKIN</h1>
+			<h2>CORE INTERACTION</h2>
 		</div>
-		<div class="lab c c3">
-			<h2>Lab</h2>
-			<p> Some text about lab</p>
 
-			<h2>Exercise 1</h2>
-			<ul>
-				<li><a href="#">My Friend</a></li>
-			</ul>
+		<div class="pages">
+			<h3><a href="lab.html">LAB</a></h3>
+			<h3><a href="studio.html">STUDIO</a></h3>
 		</div>
-		
-		<div class="footer c c6">
-			Footer
-		</div>
-	
+
 	</div>
 	</body>
 </html>
