flex grid and fixed button

--- a/lab.html
+++ b/lab.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Holly Parkin</title>
 
-		<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+		<link href="assets/css/lab.css" rel="stylesheet" type="text/css" />
 
 	</head>
 
@@ -17,9 +17,10 @@
 			<h2>CORE INTERACTION</h2>
 		</div>
 
-		<div class="pages">
-			<h3><a href="lab.html">LAB</a></h3>
-			<h3<a href="studio.html">STUDIO</a></h3>
+		<div class="links">
+			<h3>EXERCISES</h3>
+			<h3><a href="lab/grid/index.html">GRID WEBSITE</a></h3>
+			<h3><a href="lab/flex-grid/flex-grid.html">FLEX GRID WEBSITE</a></h3>
 		</div>
 
 	</div>
