--- a/lab/grid/index.html
+++ b/lab/grid/index.html
@@ -57,6 +57,11 @@
 			<ul>
 				<li><a href="#">My Friend</a></li>
 			</ul>
+
+			<h2>Exercise 2</h2>
+			<ul>
+				<li><a href="../flex-grid/flex-grid.html">Flex Grid</a></li>
+			</ul>
 		</div>
 		
 		<div class="footer c c6">
