--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -12,15 +11,16 @@
 	<body>
 	<div class="wrapper">
 
-		<div class="header">
+		<div class="header c c4">
 			<h1>HOLLY PARKIN</h1>
 			<h2>CORE INTERACTION</h2>
 		</div>
 
 		<div class="pages">
-			<h3><a href="lab.html">LAB</a></h3>
-			<h3><a href="studio.html">STUDIO</a></h3>
+			<div class="lab-text"><a href="lab.html">LAB</a></div>
+			<div class="studio-text"><a href="studio.html">STUDIO</a></div>
 		</div>
+		
 
 	</div>
 	</body>
