--- a/space/index.html
+++ b/space/index.html
@@ -43,6 +43,7 @@
 			<div class="time"> <a href="pages/24.html"> 24:00 </a> </div> 
 		</marquee>
 		
+		<h1>What time are you taking the 6 train?</h1>
 
 	</div>
 	</body>
