--- a/space/pages/12.html
+++ b/space/pages/12.html
@@ -16,40 +16,51 @@
 		<marquee direction="left" scrollamount="4" class="top"> 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
-			<div class="time current"> <a href="12.html"> 12:00 </a> </div> 
+			<div class="time"> <a href="12.html" class="current"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
-			<div class="time current"> <a href="12.html"> 12:00 </a> </div> 
+			<div class="time"> <a href="12.html" class="current"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
-			<div class="time current"> <a href="12.html"> 12:00 </a> </div> 
+			<div class="time"> <a href="12.html" class="current"> 12:00 </a> </div>  
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
-			<div class="time current"> <a href="12.html"> 12:00 </a> </div> 
+			<div class="time"> <a href="12.html" class="current"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
-			<div class="time current"> <a href="12.html"> 12:00 </a> </div> 
+			<div class="time"> <a href="12.html" class="current"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 		</marquee>
 		
+		<marquee direction="right" scrollamount="9" class="horizontal-3">
+			<div> <img src="images/12/12-1.jpg" width="200"></div>
+		</marquee>
+
+		<marquee direction="up" scrollamount="6" class="vertical-3">
+			<div> <img src="images/12/12-2.jpg" width="200"></div>
+		</marquee>
+		
+		<marquee direction="left" scrollamount="5" class ="horizontal-2">
+			<div> <img src="images/12/12-3.jpg" width="100"></div>
+		</marquee> 
 
 	</div>
 	</body>
