--- a/space/pages/18.html
+++ b/space/pages/18.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>6 Times on the 6 Train</title>
 
-		<link href="nightcss.css" rel="stylesheet">
+		<link href="duskdawncss.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -18,36 +18,100 @@
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
-			<div class="time current"> <a href="18.html"> 18:00 </a> </div>
+			<div class="time"> <a href="18.html" class="current"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
-			<div class="time current"> <a href="18.html"> 18:00 </a> </div>
+			<div class="time"> <a href="18.html" class="current"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
-			<div class="time current"> <a href="18.html"> 18:00 </a> </div>
+			<div class="time"> <a href="18.html" class="current"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
-			<div class="time current"> <a href="18.html"> 18:00 </a> </div>
+			<div class="time"> <a href="18.html" class="current"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
-			<div class="time current"> <a href="18.html"> 18:00 </a> </div>
+			<div class="time"> <a href="18.html" class="current"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
+		</marquee>
+
+		<marquee direction="left" scrollamount="48" class ="horizontal-2">
+			<div> <img src="images/18/18-11.jpg" width="450"></div>
+		</marquee>
+
+		<marquee direction="down" scrollamount="40" class="vertical-2">
+			<div> <img src="images/18/18-12.jpg" width="400"></div>
+		</marquee>
+
+		<marquee direction="right" scrollamount="50" class ="horizontal-3">
+			<div> <img src="images/18/18-16.jpg" width="425"></div>
+		</marquee>
+
+		<marquee direction="left" scrollamount="30" class="horizontal">
+			<div> <img src="images/18/18-1.jpg" width="400"></div>
+		</marquee>
+
+		<marquee direction="down" scrollamount="37" class="vertical">
+			<div> <img src="images/18/18-2.jpg" width="200"></div>
+		</marquee>
+		
+		<marquee direction="right" scrollamount="24" class ="horizontal-2">
+			<div> <img src="images/18/18-3.jpg" width="250"></div>
+		</marquee>
+
+		<marquee direction="up" scrollamount="22" class="vertical-2">
+			<div> <img src="images/18/18-4.jpg" width="350"></div>
+		</marquee>
+
+		<marquee direction="left" scrollamount="34" class ="horizontal-3">
+			<div> <img src="images/18/18-5.jpg" width="400"></div>
+		</marquee>
+
+		<marquee direction="up" scrollamount="29" class="vertical-3">
+			<div> <img src="images/18/18-6.jpg" width="425"></div>
+		</marquee>
+
+		<marquee direction="right" scrollamount="37" class ="horizontal-4">
+			<div> <img src="images/18/18-7.jpg" width="300"></div>
+		</marquee>
+
+		<marquee direction="up" scrollamount="45" class="vertical-4">
+			<div> <img src="images/18/18-8.jpg" width="200"></div>
+		</marquee>
+
+		<marquee direction="right" scrollamount="40" class="horizontal">
+			<div> <img src="images/18/18-9.jpg" width="350"></div>
+		</marquee>
+
+		<marquee direction="up" scrollamount="55" class="vertical">
+			<div> <img src="images/18/18-10.jpg" width="150"></div>
+		</marquee>
+
+		<marquee direction="right" scrollamount="45" class ="horizontal-3">
+			<div> <img src="images/18/18-13.jpg" width="350"></div>
+		</marquee>
+
+		<marquee direction="down" scrollamount="38" class="vertical-3">
+			<div> <img src="images/18/18-14.jpg" width="400"></div>
+		</marquee>
+
+		<marquee direction="left" scrollamount="49" class ="horizontal-4">
+			<div> <img src="images/18/18-15.jpg" width="250"></div>
 		</marquee>
 		
 
