--- a/space/pages/8.html
+++ b/space/pages/8.html
@@ -15,84 +15,111 @@
 
 		<marquee direction="left" scrollamount="4" class="top"> 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
-			<div class="time current"> <a href="8.html"> 08:00 </a> </div> 
+			<div class="time"> <a href="8.html" class="current"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div>  
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
-			<div class="time current"> <a href="8.html"> 08:00 </a> </div> 
+			<div class="time"> <a href="8.html" class="current"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div>
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
-			<div class="time current"> <a href="8.html"> 08:00 </a> </div> 
+			<div class="time"> <a href="8.html" class="current"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div>
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
-			<div class="time current"> <a href="8.html"> 08:00 </a> </div> 
+			<div class="time"> <a href="8.html" class="current"> 08:00 </a> </div>  
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div>
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
-			<div class="time current"> <a href="8.html"> 08:00 </a> </div> 
+			<div class="time"> <a href="8.html" class="current"> 08:00 </a> </div>  
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div>
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
-			<div class="time current"> <a href="8.html"> 08:00 </a> </div> 
+			<div class="time"> <a href="8.html" class="current"> 08:00 </a> </div>  
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div>
+		</marquee>
+
+		<marquee direction="right" scrollamount="40" class ="horizontal-2">
+			<div> <img src="images/8/8-11.jpg" width="450"></div>
+		</marquee>
+
+		<marquee direction="up" scrollamount="48" class="vertical-2">
+			<div> <img src="images/8/8-12.jpg" width="375"></div>
+		</marquee>
+
+		<marquee direction="left" scrollamount="45" class ="horizontal-3">
+			<div> <img src="images/8/8-16.jpg" width="425"></div>
 		</marquee>
 		
-		<marquee direction="right" scrollamount="15" class="horizontal">
-			<div> <img src="images/8/8-1.jpg" width="450"></div>
+		<marquee direction="right" scrollamount="50" class="horizontal">
+			<div> <img src="images/8/8-1.jpg" width="400"></div>
 		</marquee>
 
-		<marquee direction="up" scrollamount="19" class="vertical">
+		<marquee direction="up" scrollamount="30" class="vertical">
 			<div> <img src="images/8/8-2.jpg" width="200"></div>
 		</marquee>
 		
-		<marquee direction="left" scrollamount="16" class ="horizontal-2">
+		<marquee direction="left" scrollamount="24" class ="horizontal-2">
 			<div> <img src="images/8/8-3.jpg" width="250"></div>
 		</marquee>
 
-		<marquee direction="down" scrollamount="22" class="vertical-2">
-			<div> <img src="images/8/8-4.jpg" width="400"></div>
+		<marquee direction="down" scrollamount="37" class="vertical-2">
+			<div> <img src="images/8/8-4.jpg" width="350"></div>
 		</marquee>
 
-		<marquee direction="right" scrollamount="25" class ="horizontal-3">
+		<marquee direction="right" scrollamount="29" class ="horizontal-3">
 			<div> <img src="images/8/8-5.jpg" width="400"></div>
 		</marquee>
 
-		<marquee direction="down" scrollamount="19" class="vertical-3">
-			<div> <img src="images/8/8-6.jpg" width="400"></div>
+		<marquee direction="down" scrollamount="34" class="vertical-3">
+			<div> <img src="images/8/8-6.jpg" width="425"></div>
 		</marquee>
 
 		<marquee direction="left" scrollamount="27" class ="horizontal-4">
 			<div> <img src="images/8/8-7.jpg" width="300"></div>
 		</marquee>
 
-		<marquee direction="down" scrollamount="30" class="vertical-4">
+		<marquee direction="down" scrollamount="37" class="vertical-4">
 			<div> <img src="images/8/8-8.jpg" width="200"></div>
 		</marquee>
 
-		<marquee direction="left" scrollamount="35" class="horizontal">
-			<div> <img src="images/8/8-9.jpg" width="300"></div>
+		<marquee direction="left" scrollamount="45" class="horizontal">
+			<div> <img src="images/8/8-9.jpg" width="275"></div>
 		</marquee>
 
+		<marquee direction="down" scrollamount="50" class="vertical">
+			<div> <img src="images/8/8-10.jpg" width="150"></div>
+		</marquee>
+
+		<marquee direction="left" scrollamount="55" class ="horizontal-3">
+			<div> <img src="images/8/8-13.jpg" width="350"></div>
+		</marquee>
+
+		<marquee direction="up" scrollamount="47" class="vertical-3">
+			<div> <img src="images/8/8-14.jpg" width="175"></div>
+		</marquee>
+
+		<marquee direction="right" scrollamount="45" class ="horizontal-4">
+			<div> <img src="images/8/8-15.jpg" width="250"></div>
+		</marquee>
 
 
 	</div>
