--- a/space/pages/16.html
+++ b/space/pages/16.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>6 Times on the 6 Train</title>
 
-		<link href="daycss.css" rel="stylesheet">
+		<link href="duskdawncss.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -17,39 +17,59 @@
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
-			<div class="time current"> <a href="16.html"> 16:00 </a> </div> 
+			<div class="time"> <a href="16.html" class="current"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
-			<div class="time current"> <a href="16.html"> 16:00 </a> </div> 
+			<div class="time"> <a href="16.html" class="current"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
-			<div class="time current"> <a href="16.html"> 16:00 </a> </div> 
+			<div class="time"> <a href="16.html" class="current"> 16:00 </a> </div>  
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
-			<div class="time current"> <a href="16.html"> 16:00 </a> </div> 
+			<div class="time"> <a href="16.html" class="current"> 16:00 </a> </div>  
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
-			<div class="time current"> <a href="16.html"> 16:00 </a> </div> 
+			<div class="time"> <a href="16.html" class="current"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 		</marquee>
+
+		<marquee direction="right" scrollamount="11" class="horizontal-1">
+			<div> <img src="images/16/16-1.jpg" width="200"></div>
+		</marquee>
+
+		<marquee direction="up" scrollamount="15" class="vertical-2">
+			<div> <img src="images/16/16-2.jpg" width="130"></div>
+		</marquee>
 		
+		<marquee direction="left" scrollamount="9" class ="horizontal-2">
+			<div> <img src="images/16/16-3.jpg" width="100"></div>
+		</marquee> 
+
+		<marquee direction="down" scrollamount="10" class="vertical-4">
+			<div> <img src="images/16/16-4.jpg" width="175"></div>
+		</marquee>
+
+		<marquee direction="left" scrollamount="13" class="horizontal-3">
+			<div> <img src="images/16/16-5.jpg" width="150"></div>
+		</marquee>
+
 
 	</div>
 	</body>
