--- a/space/pages/24.html
+++ b/space/pages/24.html
@@ -19,35 +19,35 @@
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
-			<div class="time current"> <a href="24.html"> 24:00 </a> </div> 
+			<div class="time"> <a href="24.html" class="current"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
-			<div class="time current"> <a href="24.html"> 24:00 </a> </div> 
+			<div class="time"> <a href="24.html" class="current"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
-			<div class="time current"> <a href="24.html"> 24:00 </a> </div> 
+			<div class="time"> <a href="24.html" class="current"> 24:00 </a> </div> 
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
-			<div class="time current"> <a href="24.html"> 24:00 </a> </div> 
+			<div class="time"> <a href="24.html" class="current"> 24:00 </a> </div>  
 
 			<div class="time"> <a href="4.html"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
-			<div class="time current"> <a href="24.html"> 24:00 </a> </div> 
+			<div class="time"> <a href="24.html" class="current"> 24:00 </a> </div> 
 		</marquee>
 
 		<marquee direction="left" scrollamount="2" class="horizontal">
