--- a/space/pages/4.html
+++ b/space/pages/4.html
@@ -14,35 +14,35 @@
 		</marquee>
 
 		<marquee direction="left" scrollamount="4" class="top"> 
-			<div class="time current"> <a href="4.html"> 04:00 </a> </div> 
+			<div class="time"> <a href="4.html" class="current"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
-			<div class="time current"> <a href="4.html"> 04:00 </a> </div> 
+			<div class="time"> <a href="4.html" class="current"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
-			<div class="time current"> <a href="4.html"> 04:00 </a> </div> 
+			<div class="time"> <a href="4.html" class="current"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
-			<div class="time current"> <a href="4.html"> 04:00 </a> </div> 
+			<div class="time"> <a href="4.html" class="current"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
 			<div class="time"> <a href="18.html"> 18:00 </a> </div>
 			<div class="time"> <a href="24.html"> 24:00 </a> </div> 
 
-			<div class="time current"> <a href="4.html"> 04:00 </a> </div> 
+			<div class="time"> <a href="4.html" class="current"> 04:00 </a> </div> 
 			<div class="time"> <a href="8.html"> 08:00 </a> </div> 
 			<div class="time"> <a href="12.html"> 12:00 </a> </div> 
 			<div class="time"> <a href="16.html"> 16:00 </a> </div> 
