--- a/lab.html
+++ b/lab.html
@@ -21,6 +21,7 @@
 			<h3>EXERCISES</h3>
 			<h3><a href="lab/grid/index.html">GRID WEBSITE</a></h3>
 			<h3><a href="lab/flex-grid/flex-grid.html">FLEX GRID WEBSITE</a></h3>
+			<h3><a href="lab/letter/letter.html">LETTER</a></h3>
 		</div>
 
 	</div>
