--- a/lab.html
+++ b/lab.html
@@ -13,15 +13,16 @@
 	<div class="wrapper">
 
 		<div class="header">
-			<h1>HOLLY PARKIN</h1>
-			<h2>CORE INTERACTION</h2>
+			<h1>LAB</h1>
 		</div>
 
-		<div class="links">
-			<h3>EXERCISES</h3>
+		<div class="pages">
+			<h3><u>EXERCISES</u></h3>
 			<h3><a href="lab/grid/index.html">GRID WEBSITE</a></h3>
 			<h3><a href="lab/flex-grid/flex-grid.html">FLEX GRID WEBSITE</a></h3>
 			<h3><a href="lab/letter/letter.html">LETTER</a></h3>
+			<h3><a href="lab/quiz1/quiz1.html">QUIZ 1</a></h3>
+			<h3><a href="lab/quiz2/quiz2.html">QUIZ 2</a></h3>
 		</div>
 
 	</div>
