--- a/studio.html
+++ b/studio.html
@@ -16,8 +16,8 @@
 			<h1>STUDIO</h1>
 		</div>
 
-		<div class="links">
-			<h3>PROJECT 1: SPACE</h3>
+		<div class="pages">
+			<h3><u>PROJECT 1: SPACE</u></h3>
 			<h3><a href="space/sketches/spaceprez.pptx">SPACE ANALYSIS</a></h3>
 			<h3><a href="space/sketches/spacewebsiteprez.pdf">WEBSITE PROPOSAL</a></h3>
 			<h3><a href="space/index.html">FINAL WEBSITE</a></h3>
