typeface initial testing

--- a/studio.html
+++ b/studio.html
@@ -21,6 +21,13 @@
 			<h3><a href="space/sketches/spaceprez.pptx">SPACE ANALYSIS</a></h3>
 			<h3><a href="space/sketches/spacewebsiteprez.pdf">WEBSITE PROPOSAL</a></h3>
 			<h3><a href="space/index.html">FINAL WEBSITE</a></h3>
+
+			<br />
+
+			<h3><u>PROJECT 2: TYPEFACE</u></h3>
+			<h3><a href="typeface/sketches/typography_sketches.pdf">INITIAL SKETCHES</a></h3>
+			<h3><a href="typeface/sketches/typography_sketches_2.pdf">SECONDARY SKETCHES</a></h3>
+			<h3><a href="typeface/index.html">TEST DESIGN</a></h3>
 		</div>
 
 	</div>
