--- a/lab.html
+++ b/lab.html
@@ -23,6 +23,7 @@
 			<h3><a href="lab/letter/letter.html">LETTER</a></h3>
 			<h3><a href="lab/quiz1/quiz1.html">QUIZ 1</a></h3>
 			<h3><a href="lab/quiz2/quiz2.html">QUIZ 2</a></h3>
+			<h3><a href="lab/javascript/js.html">JAVASCRIPT INTRODUCTION</a></h3>
 		</div>
 
 	</div>
