--- a/typeface/index.html
+++ b/typeface/index.html
@@ -2,11 +2,15 @@
 <html>
 
 <head>
-  <title>JS Bin</title>
+  <title>Typeface</title>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
   <link href="typeface.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+
 
 <div class="outerwrapper">
 
@@ -16,18 +20,21 @@
 			<div class="horizontalline hz1 r1"></div>
 			<div class="horizontalline hz2 r1"></div>
 			<div class="horizontalline hz3 r1"></div>
+			<div class="horizontalline hz4 r1"></div>
 		</div>
 
 		<div class="horizontalcontainer r2">
 			<div class="horizontalline hz1 r2"></div>
 			<div class="horizontalline hz2 r2"></div>
 			<div class="horizontalline hz3 r2"></div>
+			<div class="horizontalline hz4 r2"></div>
 		</div>
 
 		<div class="horizontalcontainer r3">
 			<div class="horizontalline hz1 r3"></div>
 			<div class="horizontalline hz2 r3"></div>
 			<div class="horizontalline hz3 r3"></div>
+			<div class="horizontalline hz4 r3"></div>
 		</div>
 
 		<div class="verticalcontainer c1">
@@ -36,6 +43,7 @@
 			<div class="verticalline v3 c1"></div>
 			<div class="verticalline v4 c1"></div>
 			<div class="verticalline v5 c1"></div>
+			<div class="verticalline v6 c1"></div>
 		</div>
 
 		<div class="verticalcontainer c2">
@@ -44,6 +52,8 @@
 			<div class="verticalline v3 c2"></div>
 			<div class="verticalline v4 c2"></div>
 			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v6 c2"></div>
 		</div>
 
 		<div class="verticalcontainer c3">
@@ -52,6 +62,7 @@
 			<div class="verticalline v3 c3"></div>
 			<div class="verticalline v4 c3"></div>
 			<div class="verticalline v5 c3"></div>
+			<div class="verticalline v6 c3"></div>
 		</div>
 
 	</div>
@@ -62,18 +73,21 @@
 			<div class="horizontalline hz1 r1"></div>
 			<div class="horizontalline hz2 r1"></div>
 			<div class="horizontalline hz3 r1"></div>
+			<div class="horizontalline hz4 r1"></div>
 		</div>
 
 		<div class="horizontalcontainer r2">
 			<div class="horizontalline hz1 r2"></div>
 			<div class="horizontalline hz2 r2"></div>
 			<div class="horizontalline hz3 r2"></div>
+			<div class="horizontalline hz4 r2"></div>
 		</div>
 
 		<div class="horizontalcontainer r3">
 			<div class="horizontalline hz1 r3"></div>
 			<div class="horizontalline hz2 r3"></div>
 			<div class="horizontalline hz3 r3"></div>
+			<div class="horizontalline hz4 r3"></div>
 		</div>
 
 		<div class="verticalcontainer c1">
@@ -82,6 +96,7 @@
 			<div class="verticalline v3 c1"></div>
 			<div class="verticalline v4 c1"></div>
 			<div class="verticalline v5 c1"></div>
+			<div class="verticalline v6 c1"></div>
 		</div>
 
 		<div class="verticalcontainer c2">
@@ -90,6 +105,8 @@
 			<div class="verticalline v3 c2"></div>
 			<div class="verticalline v4 c2"></div>
 			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v6 c2"></div>
 		</div>
 
 		<div class="verticalcontainer c3">
@@ -98,6 +115,7 @@
 			<div class="verticalline v3 c3"></div>
 			<div class="verticalline v4 c3"></div>
 			<div class="verticalline v5 c3"></div>
+			<div class="verticalline v6 c3"></div>
 		</div>
 
 	</div>
@@ -108,18 +126,21 @@
 			<div class="horizontalline hz1 r1"></div>
 			<div class="horizontalline hz2 r1"></div>
 			<div class="horizontalline hz3 r1"></div>
+			<div class="horizontalline hz4 r1"></div>
 		</div>
 
 		<div class="horizontalcontainer r2">
 			<div class="horizontalline hz1 r2"></div>
 			<div class="horizontalline hz2 r2"></div>
 			<div class="horizontalline hz3 r2"></div>
+			<div class="horizontalline hz4 r2"></div>
 		</div>
 
 		<div class="horizontalcontainer r3">
 			<div class="horizontalline hz1 r3"></div>
 			<div class="horizontalline hz2 r3"></div>
 			<div class="horizontalline hz3 r3"></div>
+			<div class="horizontalline hz4 r3"></div>
 		</div>
 
 		<div class="verticalcontainer c1">
@@ -128,6 +149,7 @@
 			<div class="verticalline v3 c1"></div>
 			<div class="verticalline v4 c1"></div>
 			<div class="verticalline v5 c1"></div>
+			<div class="verticalline v6 c1"></div>
 		</div>
 
 		<div class="verticalcontainer c2">
@@ -136,6 +158,8 @@
 			<div class="verticalline v3 c2"></div>
 			<div class="verticalline v4 c2"></div>
 			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v6 c2"></div>
 		</div>
 
 		<div class="verticalcontainer c3">
@@ -144,28 +168,31 @@
 			<div class="verticalline v3 c3"></div>
 			<div class="verticalline v4 c3"></div>
 			<div class="verticalline v5 c3"></div>
+			<div class="verticalline v6 c3"></div>
 		</div>
 
 	</div>
-
-	<div class=letterwrapper>
+<div class=letterwrapper>
 
 		<div class="horizontalcontainer r1">
 			<div class="horizontalline hz1 r1"></div>
 			<div class="horizontalline hz2 r1"></div>
 			<div class="horizontalline hz3 r1"></div>
+			<div class="horizontalline hz4 r1"></div>
 		</div>
 
 		<div class="horizontalcontainer r2">
 			<div class="horizontalline hz1 r2"></div>
 			<div class="horizontalline hz2 r2"></div>
 			<div class="horizontalline hz3 r2"></div>
+			<div class="horizontalline hz4 r2"></div>
 		</div>
 
 		<div class="horizontalcontainer r3">
 			<div class="horizontalline hz1 r3"></div>
 			<div class="horizontalline hz2 r3"></div>
 			<div class="horizontalline hz3 r3"></div>
+			<div class="horizontalline hz4 r3"></div>
 		</div>
 
 		<div class="verticalcontainer c1">
@@ -174,6 +201,7 @@
 			<div class="verticalline v3 c1"></div>
 			<div class="verticalline v4 c1"></div>
 			<div class="verticalline v5 c1"></div>
+			<div class="verticalline v6 c1"></div>
 		</div>
 
 		<div class="verticalcontainer c2">
@@ -182,6 +210,8 @@
 			<div class="verticalline v3 c2"></div>
 			<div class="verticalline v4 c2"></div>
 			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v6 c2"></div>
 		</div>
 
 		<div class="verticalcontainer c3">
@@ -190,6 +220,7 @@
 			<div class="verticalline v3 c3"></div>
 			<div class="verticalline v4 c3"></div>
 			<div class="verticalline v5 c3"></div>
+			<div class="verticalline v6 c3"></div>
 		</div>
 
 	</div>
@@ -200,18 +231,21 @@
 			<div class="horizontalline hz1 r1"></div>
 			<div class="horizontalline hz2 r1"></div>
 			<div class="horizontalline hz3 r1"></div>
+			<div class="horizontalline hz4 r1"></div>
 		</div>
 
 		<div class="horizontalcontainer r2">
 			<div class="horizontalline hz1 r2"></div>
 			<div class="horizontalline hz2 r2"></div>
 			<div class="horizontalline hz3 r2"></div>
+			<div class="horizontalline hz4 r2"></div>
 		</div>
 
 		<div class="horizontalcontainer r3">
 			<div class="horizontalline hz1 r3"></div>
 			<div class="horizontalline hz2 r3"></div>
 			<div class="horizontalline hz3 r3"></div>
+			<div class="horizontalline hz4 r3"></div>
 		</div>
 
 		<div class="verticalcontainer c1">
@@ -220,6 +254,7 @@
 			<div class="verticalline v3 c1"></div>
 			<div class="verticalline v4 c1"></div>
 			<div class="verticalline v5 c1"></div>
+			<div class="verticalline v6 c1"></div>
 		</div>
 
 		<div class="verticalcontainer c2">
@@ -228,6 +263,8 @@
 			<div class="verticalline v3 c2"></div>
 			<div class="verticalline v4 c2"></div>
 			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v5 c2"></div>
+			<div class="verticalline v6 c2"></div>
 		</div>
 
 		<div class="verticalcontainer c3">
@@ -236,6 +273,7 @@
 			<div class="verticalline v3 c3"></div>
 			<div class="verticalline v4 c3"></div>
 			<div class="verticalline v5 c3"></div>
+			<div class="verticalline v6 c3"></div>
 		</div>
 
 	</div>
@@ -243,6 +281,9 @@
 
 
 </div>
+
+<script src="typeface.js"></script>
+
 
 </body>
 
