--- a/typeface/index.html
+++ b/typeface/index.html
@@ -283,7 +283,11 @@
 </div>
 
 <div class="instructions page-1">
-	SCROLL AND SPELL IS A DIGITAL TYPEFACE COMPOSED OF SCROLLABLE BARS OF DIFFERING LENGTHS THAT YOU CAN MANIPULATE YOURSELF. <span class="sayhello"><a href="#/">CLICK HERE TO SEE IT IN ACTION.</a></div>
+	SCROLL AND SPELL IS A DIGITAL TYPEFACE COMPOSED OF SCROLLABLE BARS OF DIFFERING LENGTHS THAT YOU CAN MANIPULATE YOURSELF.
+</div>
+
+<div class="instructions action page-1">
+	<div class="sayhello"><a href="#/">SEE IT IN ACTION.</a></div>
 </div>
 
 </div> 
@@ -559,8 +563,13 @@
 </div>
 
 <div class="instructions page-2">
-	YOU CAN CHANGE THE LETTERS EASILY TO MAKE NEW WORDS. <span class="fortune"><a href="#/">TRY ASKING A (Y OR N) QUESTION AND SEE WHAT THE TYPEFACE SAYS.</a></div>
+	YOU CAN CHANGE THE LETTERS EASILY TO MAKE NEW WORDS.
 </div> 
+
+<div class="instructions action page-2">
+	<div class="fortune"><a href="#/">TRY ASKING A (Y OR N) QUESTION AND SEE WHAT THE TYPEFACE SAYS.</a></div>
+</div> 
+
 
 </div>
 
@@ -1101,8 +1110,20 @@
 </div>
 
 <div class="instructions page-3">
-	NOW YOU CAN TRY MAKING YOUR OWN WORDS. SIMPLY SCROLL UP AND DOWN OVER THE BARS TO REARRANGE THEM. <div class="scramble"><a href="#/">CLICK HERE TO RESCRAMBLE THE LETTERS.</a> </div> <div class="clear"><a href="#/">CLICK HERE TO COMPLETELY CLEAR THEM.</a></div>
+	NOW YOU CAN TRY MAKING YOUR OWN WORDS. SIMPLY SCROLL UP AND DOWN OVER THE BARS TO REARRANGE THEM.
 </div> 
+
+<div class="instructionswrapper">
+
+	<div class="action2 page-3">
+		<div class="scramble"><a href="#/">RESCRAMBLE</a> </div>
+	</div> 
+
+	<div class="action2 page-3">
+		<div class="clear"><a href="#/">CLEAR</a></div>
+	</div> 
+
+</div>
 
 </div>
 
