typeface REAL final

--- a/typeface/index.html
+++ b/typeface/index.html
@@ -286,9 +286,9 @@
 	SCROLL AND SPELL IS A DIGITAL TYPEFACE COMPOSED OF SCROLLABLE BARS OF DIFFERING LENGTHS THAT YOU CAN MANIPULATE YOURSELF.
 </div>
 
-<div class="instructions action page-1">
-	<div class="sayhello"><a href="#/">SEE IT IN ACTION.</a></div>
-</div>
+<div class="sayhello"><a href="#/"><div class="instructions action page-1">
+	SEE IT IN ACTION.
+</div></a></div>
 
 </div> 
 
@@ -566,9 +566,9 @@
 	YOU CAN CHANGE THE LETTERS EASILY TO MAKE NEW WORDS.
 </div> 
 
-<div class="instructions action page-2">
-	<div class="fortune"><a href="#/">TRY ASKING A (Y OR N) QUESTION AND SEE WHAT THE TYPEFACE SAYS.</a></div>
-</div> 
+<div class="fortune"><a href="#/"><div class="instructions action page-2">
+	TRY ASKING A (Y OR N) QUESTION AND SEE WHAT THE TYPEFACE SAYS.
+</div></a></div>
 
 
 </div>
@@ -1115,13 +1115,13 @@
 
 <div class="instructionswrapper">
 
-	<div class="action2 page-3">
-		<div class="scramble"><a href="#/">RESCRAMBLE</a> </div>
-	</div> 
+	<div class="action2 page-3"> <div class="scramble"><a href="#/"> 
+		RESCRAMBLE
+	</div> </a></div>
 
-	<div class="action2 page-3">
-		<div class="clear"><a href="#/">CLEAR</a></div>
-	</div> 
+	<div class="action2 page-3"> <div class="clear"><a href="#/">
+		CLEAR
+	</div> </a></div>
 
 </div>
 
