--- a/studio.html
+++ b/studio.html
@@ -27,7 +27,7 @@
 			<h3><u>PROJECT 2: TYPEFACE</u></h3>
 			<h3><a href="typeface/sketches/typography_sketches.pdf">INITIAL SKETCHES</a></h3>
 			<h3><a href="typeface/sketches/typography_sketches_2.pdf">SECONDARY SKETCHES</a></h3>
-			<h3><a href="typeface/index.html">TEST DESIGN</a></h3>
+			<h3><a href="typeface/index.html">FINAL DESIGN</a></h3>
 		</div>
 
 	</div>
