--- a/lab.html
+++ b/lab.html
@@ -24,7 +24,9 @@
 			<h3><a href="lab/quiz1/quiz1.html">QUIZ 1</a></h3>
 			<h3><a href="lab/quiz2/quiz2.html">QUIZ 2</a></h3>
 			<h3><a href="lab/javascript/js.html">JAVASCRIPT INTRODUCTION</a></h3>
-			<h3><a href="lab/javascript2/js2.html">JAVASCRIPT LAB 2</a></h3>
+			<h3><a href="lab/javascript2/js2.html">JAVASCRIPT LAB 2: LINKS IN JS</a></h3>
+			<h3><a href="lab/javascript3/js3.html">JAVASCRIPT LAB 3: TYPING TOOL</a></h3>
+			<h3><a href="lab/javascript4/js4.html">JAVASCRIPT LAB 4: RANDOMIZING</a></h3>
 		</div>
 
 	</div>
