--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
 		</div>
 
 		<div class="pages">
-			<div class="lab-text"><a href="lab.html">LAB</a></div>
-			<div class="studio-text"><a href="studio.html">STUDIO</a></div>
+
+		<div class="lab-text"><a href="lab.html"> 
+			LAB
+		</a></div>
+	
+		<div class="studio-text"><a href="studio.html"> 
+			STUDIO
+		</a></div>
+		
 		</div>
 		
 
