--- a/studio.html
+++ b/studio.html
@@ -28,6 +28,13 @@
 			<h3><a href="typeface/sketches/typography_sketches.pdf">INITIAL SKETCHES</a></h3>
 			<h3><a href="typeface/sketches/typography_sketches_2.pdf">SECONDARY SKETCHES</a></h3>
 			<h3><a href="typeface/index.html">FINAL DESIGN</a></h3>
+
+			<br />
+
+			<h3><u>PROJECT 3: CHANCE</u></h3>
+			<h3><a href="chance/sketches/poemgenerator_sketches.pdf">INITIAL SKETCHES</a></h3>
+			<h3><a href="typeface/sketches/poem_sketches2.pdf">SECONDARY SKETCHES</a></h3>
+			<h3><a href="chance/index.html">FINAL DESIGN</a></h3>
 		</div>
 
 	</div>
