--- a/index_old.html
+++ b/index_old.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Holly Parkin</title>
 
-		<link href="assets/css/style2.css" rel="stylesheet" type="text/css" />
+		<link href="assets/css/styleold.css" rel="stylesheet" type="text/css" />
 
 	</head>
 
