final chance project

--- a/chance/index.html
+++ b/chance/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Chance Project</title>
+  <title>Kalexiscope</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
@@ -13,6 +13,9 @@
 
 <div class="poem"></div>
 
+<div class="arrow">
+	<img src="img/arrowkey.png" width="70">
+</div>
 
 <script src="chance.js"></script>
 
